<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    tools:context=".signup_screen">

    <TextView
        android:id="@+id/faded_signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>
    <RelativeLayout
        android:layout_below="@id/faded_signup_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardbackground"
        android:layout_marginTop="60dp"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearlayoutsign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="First name"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="Last name"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_signemail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_signpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_eye"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:background="@drawable/loginbtnbackground"
                android:textSize="20sp"
                android:textColor="@color/skyblue"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/linearlayoutsign"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? "
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signtolog_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txt"
                android:text="@string/login"
                android:textColor="@color/skyblue"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>