<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary" />

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@mipmap/ic_launcher"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="5dp" />  <!-- circular image view -->
                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/white_ovel"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_edit_pen" />
                    </LinearLayout>  <!-- profile image edit pen -->
                </RelativeLayout>  <!-- profile image circular view  -->
            </RelativeLayout>  <!-- profile image uper header -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:paddingStart="14dp"
                android:paddingEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/first_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="roshan"
                        android:textSize="18sp"
                        android:textAllCaps="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/last_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="nahak"
                        android:textSize="18sp"
                        android:textAllCaps="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/profile_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="roshannahak1122@gmail.com"
                        android:textSize="18sp"
                        android:textAllCaps="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="497557"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/loginbtnbackground"
                    android:text="Save"
                    android:textColor="@color/skyblue"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>  <!-- all input fields -->
        </LinearLayout>  <!-- scroll view parent layout -->
    </ScrollView>  <!-- scroll view -->

</LinearLayout>